--- a/app/templates/preguntas.html
+++ b/app/templates/preguntas.html
@@ -269,9 +269,8 @@ Preguntas
         border-bottom: none;
     }
 
-
     /* Listado de preguntas */
-    .questions-dropdown {
+    .questions-dropdown, .exercises-dropdown {
         margin-top: 20px;
         background-color: #FFF;
         border-radius: 8px;
@@ -279,7 +278,7 @@ Preguntas
         padding: 10px;
     }
 
-    #toggleQuestions {
+    #toggleQuestions, #toggleComments {
         background-color: #72B4A4;
         color: white;
         border: none;
@@ -289,31 +288,20 @@ Preguntas
         transition: background-color 0.3s;
     }
 
-    #toggleQuestions:hover {
+    #toggleQuestions:hover, #toggleComments:hover  {
         background-color: #62a394;
     }
 
-    .questions-content .question-item {
+    .questions-content .question-item, .exercises-content .exercise-item   {
         padding: 10px;
         border: 4px solid #ddd;
         background-color: #f9f9f9;
         margin-bottom: 30px;
     }
 
-    .questions-content .question-item:last-child {
-        border-bottom: none;
-    }
-
-    .question-image {
-        max-width: 100px;  
-        max-height: 100px;
-        border-radius: 5px;
-        margin-top: 10px;
-        cursor: pointer; 
-    }
 
     /* Estilos ajustados para el formulario y listado de preguntas */
-    form, .questions-dropdown {
+    form, .questions-dropdown, .exercises-dropdown {
         margin: 30px auto;
         padding: 20px 30px;
         background-color: #FFF;
@@ -324,34 +312,26 @@ Preguntas
     }
 
     /* Estilo ajustado para el botón de "Mis Preguntas" */
-    #toggleQuestions {
+    #toggleQuestions, #toggleComments {
         width: 100%;
         text-align: center;
         margin-bottom: 20px;
     }
 
+
     /* Estilo para el contenido de preguntas */
-    .questions-content {
+    .questions-content, .exercises-content {
         margin-top: 20px;
         border-top: 1px solid #ddd;
     }
 
-    .question-item {
+    .question-item, .exercise-item {
         padding: 10px;
         border-bottom: 1px solid #ddd;
         background-color: #f9f9f9;
         display: flex;
         flex-direction: column;
         gap: 10px;
-    }
-
-    .question-image {
-        max-width: 100px;
-        max-height: 100px;
-        border-radius: 5px;
-        margin-top: 10px;
-        cursor: pointer;
-        align-self: center;
     }
 
     /* Estilo para el enlace de la imagen adjunta */
@@ -399,6 +379,22 @@ Preguntas
             {% endfor %}
         </div>
     </div>
+
+    <!-- Listado de Ejercicios Comentados -->
+    <div class="exercises-dropdown">
+        <button id="toggleComments">Ejercicios Comentados</button>
+        <div class="exercises-content">
+            {% for exercise in commented_exercises|reverse %}
+                <div class="exercise-item">
+                    <p><strong>Ejercicio ID:</strong> {{ exercise.id }}</p>
+                    <p><strong>Fecha de Revisión:</strong> {{ exercise.completion_date }}</p>
+                    <p><strong>Comentario del Profesor:</strong> {{ exercise.comments }}</p>
+                    <p><strong>Código de Solución:</strong></p>
+                    <pre>{{ exercise.solution_code }}</pre>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 </main>
 {% endblock %}
 
@@ -408,10 +404,16 @@ Preguntas
     $(document).ready(function() {
         // Ocultar el contenido al inicio
         $(".questions-content").hide();
+        $(".exercises-content").hide();
 
         // Toggle del contenido al hacer clic en el botón
         $("#toggleQuestions").click(function() {
             $(".questions-content").slideToggle();
+        });
+
+        // Toggle del contenido al hacer clic en el botón
+        $("#toggleComments").click(function() {
+            $(".exercises-content").slideToggle();
         });
     });
 </script>
