--- a/app/templates/exercise.html
+++ b/app/templates/exercise.html
@@ -356,7 +356,7 @@ Ejercicio
     </div>
 
     <div class="alert-requirements">
-        <h3>¡Cuidado! Este ejercicio debe contener: <strong>{{ exercise.requirements }}</strong> para poder ser corregido.</h3>
+        <h3>¡Cuidado! Este ejercicio debe contener: <strong>{{ exercise.requirements }}</strong> para poder ser valido.</h3>
     </div>
 
     <div class="compiler-section">
