--- a/app/templates/biblioteca.html
+++ b/app/templates/biblioteca.html
@@ -6,194 +6,6 @@ Biblioteca
 
 {% block head_extra %}
 <style type="text/css">
-    body {
-        margin: 0;
-        height: 100vh;
-        font-family: 'Open Sans', sans-serif;
-        background-color: #E1E9EE; /* Color azul claro */
-    }
-
-    .top-nav, .side-nav {
-        background-color: #72B4A4; /* Color turquesa */
-        box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.1);
-        border-radius: 20px;
-    }
-
-    .top-nav {
-        position: fixed;
-        top: 0px;
-        left: 10px;
-        right: 10px;
-        height: 120px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 30px;
-        font-size: 1.5rem;
-    }
-
-    .logo {
-        height: 140px;
-    }
-
-    .user-profile {
-        display: flex;
-        align-items: center;
-    }
-
-    .user-image {
-        width: 80px;
-        height: 80px;
-        border-radius: 30%;
-        margin-right: 15px;
-    }
-
-    .user-name, .user-config {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        margin-right: 10px;
-        margin-bottom: 0px;
-    }
-
-    .user-config {
-        font-size: 0.7em;
-        color: #FF7F50; /* Color coral */
-    }
-
-    .side-nav {
-        position: fixed;
-        top: 140px;
-        left: 20px;
-        width: 210px;
-        padding: 20px;
-    }
-
-    .side-nav ul {
-        list-style-type: none;
-        padding: 0;
-    }
-
-    .side-nav ul li {
-        margin-bottom: 20px;
-        padding: 10px;
-        border-radius: 10px;
-        background-color: #F9D3BA; /* Color melocotón claro */
-    }
-
-    .side-nav ul li:hover {
-        background-color: #FFB085; /* Color melocotón oscuro */
-    }
-
-    .side-nav ul li a {
-        text-decoration: none;
-        color: #364547; /* Color gris oscuro */
-        font-size: 1.2rem;
-    }
-
-    main {
-        margin-left: 100px;
-        padding: 20px;
-    }
-
-    @media only screen and (max-width: 768px) {
-        .top-nav {
-            flex-direction: column;
-            height: auto;
-            padding: 15px;
-            top: 0;
-            left: 10px;
-            right: 10px;
-        }
-
-        .user-profile {
-            flex-direction: column;
-            align-items: center;
-            margin-top: 15px;
-        }
-
-        .side-nav {
-            position: relative;
-            top: 0;
-            width: 100%;
-            padding: 10px;
-            display: flex;
-            overflow-x: auto;
-        }
-
-        .side-nav ul {
-            display: flex;
-            justify-content: space-around;
-            width: 100%;
-        }
-
-        main {
-            margin: 0;
-            padding: 15px;
-        }
-    }
-
-    #avatarModal {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.8);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    #avatarModal .avatars {
-        display: flex;
-        gap: 10px;
-        flex-wrap: wrap;
-    }
-
-    #avatarModal img {
-        width: 120px;
-        height: 120px;
-        cursor: pointer;
-    }
-
-    .user-details {
-        display: block;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    @media only screen and (max-width: 500px) {
-        .user-details {
-            align-items: center;
-            text-align: center;
-        }
-    }
-
-    .user-details {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        margin-right: 5px; /* Reducir margen derecho */
-        margin-bottom: 0px;
-    }
-
-    .logout-btn {
-        background-color: #FF7F50; /* Color coral */
-        color: #fff;
-        padding: 5px 10px; /* Ajustar padding */
-        border-radius: 8px;
-        text-decoration: none;
-        font-size: 1rem;
-        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.1);
-        margin-left: 10px; /* Añadir margen izquierdo */
-    }
-
-    .logout-btn:hover {
-        background-color: #E76645; /* Un tono más oscuro de coral para el hover */
-    }
-
     .language-button {
         display: inline-block;
         background-color: #72B4A4;
@@ -213,7 +25,10 @@ Biblioteca
 
     .content {
         text-align: center;
-        margin-top:150px;
+    }
+
+    body, html {
+        overflow: hidden;
     }
 
 </style>
