--- a/app/templates/configuracion.html
+++ b/app/templates/configuracion.html
@@ -6,98 +6,13 @@ Configuración
 
 {% block head_extra %}
 <style type="text/css">
-    body {
-        margin: 0;
-        height: 100vh;
-        font-family: 'Open Sans', sans-serif;
-        background-color: #E1E9EE; /* Color azul claro */
-    }
 
-    .top-nav, .side-nav {
-        background-color: #72B4A4; /* Color turquesa */
-        box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.1);
-        border-radius: 20px;
-    }
-
-    .top-nav {
-        position: fixed;
-        top: 10px;
-        left: 10px;
-        right: 10px;
-        height: 120px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 30px;
-        font-size: 1.5rem;
-    }
-
-    .logo {
-        height: 140px;
-    }
-
-    .user-profile {
-        display: flex;
-        align-items: center;
-    }
-
-    .user-image {
-        width: 80px;
-        height: 80px;
-        border-radius: 30%;
-        margin-right: 15px;
-    }
-
-    .user-name, .user-config {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        margin-right: 10px;
-        margin-bottom: 0px;
-    }
-
-    .user-config {
-        font-size: 0.7em;
-        color: #FF7F50; /* Color coral */
-    }
-
-    .side-nav {
-        position: fixed;
-        top: 140px;
-        left: 20px;
-        width: 210px;
-        padding: 20px;
-    }
-
-    .side-nav ul {
-        list-style-type: none;
-        padding: 0;
-    }
-
-    .side-nav ul li {
-        margin-bottom: 20px;
-        padding: 10px;
-        border-radius: 10px;
-        background-color: #F9D3BA; /* Color melocotón claro */
-    }
-
-    .side-nav ul li:hover {
-        background-color: #FFB085; /* Color melocotón oscuro */
-    }
-
-    .side-nav ul li a {
-        text-decoration: none;
-        color: #364547; /* Color gris oscuro */
-        font-size: 1.2rem;
-    }
-
-    /* Estilos adicionales para la página de configuración */
     .config-container {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        background-color: #f0f8ff;
+        margin-top: 30px;
+        margin-left: 20px;
     }
 
     .config-form {
@@ -139,33 +54,10 @@ Configuración
         }
     }
 
-    #avatarModal {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.8);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    #avatarModal .avatars {
-        display: flex;
-        gap: 10px;
-        flex-wrap: wrap;
-    }
-
-    #avatarModal img {
-        width: 120px;
-        height: 120px;
-        cursor: pointer;
-    }
-
     .config-form {
-        width: 400px; /* Ampliar el formulario de configuración */
+        width: 500px; /* Ampliar el formulario de configuración */
+        height: 450px;
+        margin-left: -100px;
     }
 
     .config-form label {
@@ -173,28 +65,10 @@ Configuración
         margin-top: 10px;
     }
 
-    .user-details {
-        white-space: nowrap;
+    body, html {
         overflow: hidden;
-        text-overflow: ellipsis;
-        margin-right: 5px; /* Reducir margen derecho */
-        margin-bottom: 0px;
     }
 
-    .logout-btn {
-        background-color: #FF7F50; /* Color coral */
-        color: #fff;
-        padding: 5px 10px; /* Ajustar padding */
-        border-radius: 8px;
-        text-decoration: none;
-        font-size: 1rem;
-        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.1);
-        margin-left: 10px; /* Añadir margen izquierdo */
-    }
-
-    .logout-btn:hover {
-        background-color: #E76645; /* Un tono más oscuro de coral para el hover */
-    }
 </style>
 {% endblock %}
 
