--- a/app/templates/contenido.html
+++ b/app/templates/contenido.html
@@ -98,6 +98,7 @@ Contenido
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         margin-top: 10px;
         margin-right: 30px;
+        margin-left: 0px;
     }
 
     /* Estilos variables introducidas */
